# Sign-detection

./: README.md
Frontend/: package-lock.json  package.json
Frontend/src/: index.css
Frontend/src/pages/: AuthPage.jsx  CallPage.jsx  HomePage.jsx
Frontend/src/styles/: stream-chat-theme.css
Model/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
Model/src/: api.py  realtime.py
