[project]
name = "28-07-2025-sign-language"
version = "0.1.0"
description = "A full walkthrough on training a sign language model."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "albumentations>=2.0.8",
    "colorama>=0.4.6",
    "einops>=0.8.1",
    "jupyter>=1.1.1",
    "label-studio>=1.20.0",
    "matplotlib>=3.10.5",
    "rich>=13.0.0",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.1",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "opencv-python-headless>=4.10.0",
    "requests>=2.31.0",
    "numpy>=1.26.4",
    "python-multipart>=0.0.20",
]

# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
